--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-    <h1>Aapka Swaagat hai TrainWithShubham channel pe!</h1>
-    <p>Abhi fatafat like kar do, aur Subscribe bhi</p>
+    <h1>Welcome to AWS CICD Project</h1>
+    <p>You can follow techbhautik.com</p>
   </body>
 </html>
